--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Class Struggle
+name: Evgeniy Mamchenko
 
 # Short bio or description (displayed in the header)
-description: In the struggle to write code for greater good.
+description: Machine Learning Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/OutSorcerer/class-struggle/master/images/class-struggle-logo.png
+avatar: /images/evgeniymamchenko.png
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: OutSorcerer/class-struggle
+  github: OutSorcerer/evgeniymamchenko.com
   instagram:
   linkedin:
   pinterest:
@@ -34,7 +34,7 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: class-struggle
+disqus: evgeniymamchenko.com
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/class-struggle"
+baseurl:
 
 #
 # !! You don't need to change any of the configuration flags below !!
