--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ footer-links:
   flickr:
   github: OutSorcerer/evgeniymamchenko.com
   instagram:
-  linkedin:
+  linkedin: evgeniymamchenko
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  stackoverflow: users/5655977/sourcerer
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
