add the Kaggle icon

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ footer-links:
   instagram:
   linkedin: evgeniymamchenko
   pinterest:
+  kaggle: sourcerer
   rss: true # just type anything here for a working RSS icon
   twitter:
   stackoverflow: users/5655977/sourcerer
