update the desription according to the preferred job title

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Evgeniy Mamchenko
 
 # Short bio or description (displayed in the header)
-description: Machine Learning Engineer
+description: Deep Learning Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/evgeniymamchenko.png
